<resources>

    <!-- all activity title -->
    <string name="titleForShowAccountListActivity">সকল অ্যাকাউন্টের তালিকা</string>
    <string name="titleForAddAccountActivity">নতুন একাউন্ট যোগ করুন</string>
    <string name="titleForAddTransactionActivity">নতুন লেনদেন যোগ করুন</string>
    <string name="titleForEditAccountActivity">অ্যাকাউন্টের তথ্য পরিবর্তন করুন</string>
    <string name="titleForEditTransactionActivity">লেনদেনের তথ্য পরিবর্তন করুন</string>
    <string name="titleForShowAccountTransactionActivity">সব লেনদেনের তালিকা</string>



    <!-- Show Account List Feature -->
    <string name="showAccountListFeatureImageViewDescription">Account Image</string>
    <string name="showAccountListFeatureTextViewForShowingAccountName">Account Name</string>
    <string name="showAccountListFeatureTextViewForShowingMobileNumber">Account Mobile Number</string>
    <string name="showAccountListFeatureTextViewForShowingMenuSign">&#8942;</string>



    <!-- Show Transaction List Feature -->
    <string name="showTransactionFeatureTextViewForShowingAccountName">Account Name</string>
    <string name="showTransactionFeatureTextViewForShowingAccountBalance">Account Balance</string>
    <string name="showTransactionFeatureTextViewForShowingAccountStatus">Account Status</string>

    <string name="showTransactionFeatureTextViewForShowingTransactionDate">Transaction Date</string>
    <string name="showTransactionFeatureTextViewForShowingTransactionStatus">Transaction Status</string>
    <string name="showTransactionFeatureTextViewForShowingTransactionAmount">Transaction Amount</string>
    <string name="showTransactionFeatureAccountImageDescription">Transaction Amount</string>



    <!-- Add Account Feature -->
    <string name="addAccountFeatureImageViewDescription">Enter Account Image</string>
    <string name="addAccountFeatureEditTextForEnterAccountName">Enter Account Name</string>
    <string name="addAccountFeatureTextViewHintsForEnterAccountName">Enter Account Name</string>
    <string name="addAccountFeatureEditTextForEnterMobileNumber">Enter Account Mobile Number</string>
    <string name="addAccountFeatureTextViewHintsForEnterMobileNumber">Enter Account Mobile Number</string>
    <string name="addAccountFeatureButtonForSavingNewAccount">সংরক্ষণ করুন</string>



    <!-- Edit Account Feature -->
    <string name="editAccountFeatureImageViewDescription">Enter Account Image</string>
    <string name="editAccountFeatureEditTextForEnterAccountName">Enter Account Name</string>
    <string name="editAccountFeatureTextViewHintsForEnterAccountName">Enter Account Name</string>
    <string name="editAccountFeatureEditTextForEnterMobileNumber">Enter Account Mobile Number</string>
    <string name="editAccountFeatureTextViewHintsForEnterMobileNumber">Enter Account Mobile Number</string>
    <string name="editAccountFeatureButtonForSavingNewAccount">পরিবর্তন করুন</string>



    <!-- Add Transaction Feature -->
    <string name="addTransactionFeatureEditTextEnterTransactionAmount">Enter Transaction Amount</string>
    <string name="addTransactionFeatureRadioButton1">দিয়েছেন</string>
    <string name="addTransactionFeatureRadioButton2">নিয়েছেন</string>
    <string name="addTransactionFeatureButtonForSavingNewTransaction">সংরক্ষণ করুন</string>



    <!-- Show Account Details Feature -->
    <string name="showAccountDetailsPopUpImageViewForShowingAccountImage">Show Account Image</string>
    <string name="showAccountDetailsPopUpTextViewForShowingAccountName">Show Name Here</string>
    <string name="showAccountDetailsPopUpTextViewForShowingAccountMobileNumber">Show Mobile Number here</string>
    <string name="showAccountDetailsPopUpButtonForDismissPopUp">Done</string>



    <!-- Take Image Feature -->
    <string name="TakeImageFeatureButtonForFlipCamera">Flip Camera</string>
    <string name="TakeImageFeatureButtonForCaptureImage">Capture</string>
    <string name="TakeImageFeatureButtonForUseThisImage">Use This Image</string>


    <string name="MenuItemForAddNewTransaction">Add Transaction</string>
    <string name="MenuForCallAccountPerson">Call This Person</string>
    <string name="MenuForMessageAccountPerson">Message This Person</string>
    <string name="MenuForAddNewTransaction">Add New Transaction</string>



    <!-- save money or spent money -->
    <string name="giveMoney">দিয়েছেন</string>
    <string name="takeMoney">নিয়েছেন</string>
    <string name="menuItemForDeleteAccount">Delete This Account</string>
    <string name="menuForDeleteAllTransaction">Delete All Transaction</string>


</resources>
