<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:layout_gravity="center|center_horizontal|center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/ShowAccountDetailsFeaturePopUpAccountImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/showAccountDetailsPopUpImageViewForShowingAccountImage"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/b"
                />

            <TextView
                android:id="@+id/ShowAccountDetailsFeaturePopUpAccountName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/showAccountDetailsPopUpTextViewForShowingAccountName"
                android:gravity="center|bottom"
                />

            <TextView
                android:id="@+id/ShowAccountDetailsFeaturePopUpAccountMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/showAccountDetailsPopUpTextViewForShowingAccountMobileNumber"
                android:gravity="center|top"
                />

            <Button
                android:id="@+id/ShowAccountDetailsFeaturePopUpDismissButton"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:text="@string/showAccountDetailsPopUpButtonForDismissPopUp"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

</android.support.v7.widget.CardView>
