<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="myaccountant.gobinda.cse.ju.org.myaccountant10.add_transaction_feature.AddTransactionActivity">


    <EditText
        android:id="@+id/AddTransactionFeatureEditTextForAddingTransactionAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="15"
        android:textColor="#000"
        android:background="#f0f0f4"
        android:padding="10dp"
        android:hint="@string/addTransactionFeatureEditTextEnterTransactionAmount" />

    <RadioGroup
        android:id="@+id/AddTransactionFeatureRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:layout_below="@+id/AddTransactionFeatureEditTextForAddingTransactionAmount">

        <RadioButton android:id="@+id/AddTransactionFeatureRadioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addTransactionFeatureRadioButton1"
            android:gravity="center"/>
        <RadioButton android:id="@+id/AddTransactionFeatureRadioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addTransactionFeatureRadioButton2"
            android:gravity="center"/>

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/AddTransactionFeatureRadioGroup"
        android:text="@string/addTransactionFeatureButtonForSavingNewTransaction"
        android:onClick="saveThisTransaction"/>

</RelativeLayout>
