<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#e3e3e3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="myaccountant.gobinda.cse.ju.org.myaccountant10.add_account_feature.AddAccountActivity">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorBackgroundFloating"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/AddAccountFeatureImageViewForAddingAccountImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/addAccountFeatureImageViewDescription"
                android:layout_margin="10dp"
                android:onClick="goToTakeImageActivity"
                android:src="@drawable/a" />

            <TextView
                android:id="@+id/AddAccountFeatureTextViewHintsForAddingAccountName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/addAccountFeatureTextViewHintsForEnterAccountName"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <EditText
                android:id="@+id/AddAccountFeatureEditTextForAddingAccountName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxLength="15"
                android:textColor="#000"
                android:background="#f0f0f4"
                android:padding="10dp"
                android:hint="@string/addAccountFeatureEditTextForEnterAccountName"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/AddAccountFeatureTextViewHintsForAddingAccountMobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/addAccountFeatureTextViewHintsForEnterMobileNumber"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <EditText
                android:id="@+id/AddAccountFeatureEditTextForAddingAccountMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:background="#f0f0f4"
                android:maxLength="11"
                android:padding="10dp"
                android:inputType="number"
                android:hint="@string/addAccountFeatureEditTextForEnterMobileNumber"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f0f0f4"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:onClick="saveAccountButtonPressed"
                android:padding="10dp"
                android:text="@string/addAccountFeatureButtonForSavingNewAccount"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</ScrollView>
