<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="myaccountant.gobinda.cse.ju.org.myaccountant10.show_account_transaction_feature.ShowAccountTransactionActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/ShowAccountTransactionFeatureCardViewForShowingAccountDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ShowTransactionFeatureImageViewForShowingAccountImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/showTransactionFeatureAccountImageDescription"
                android:src="@drawable/b"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/ShowTransactionFeatureTextViewForShowingAccountStatus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/showTransactionFeatureTextViewForShowingAccountStatus"
                        android:textSize="22sp"
                        android:gravity="bottom"/>

                    <TextView
                        android:id="@+id/ShowTransactionFeatureTextViewForShowingAccountBalance"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/showTransactionFeatureTextViewForShowingAccountBalance"
                        android:textSize="22sp"
                        android:gravity="top"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/ShowTransactionFeatureTextViewForShowingAccountOptions"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/showAccountListFeatureTextViewForShowingMenuSign"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:textAppearance="?android:textAppearanceLarge" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ShowTransactionFeatureRecycleViewForShowingAllTransaction"
        android:layout_width="match_parent"
        android:layout_below="@id/ShowAccountTransactionFeatureCardViewForShowingAccountDetails"
        android:layout_height="wrap_content" />

</RelativeLayout>

